# LimoWalletC

app/: build.gradle
app/libs/: gallery-dmcBig-release.aar  share-weixin-release.aar  sina-libs-release.aar  weex_amap-release.aar  weex_videoplayer-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: default.json  test
app/src/main/assets/data/: dcloud_control.xml  dcloud_properties.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: gcrypt.h  gpgrt.h  libssh2_publickey.h
app/src/main/cpp/include/git2/: common.h  stdint.h
app/src/main/cpp/include/openssl/: asn1.h  async.h  crypto.h  opensslconf.h  rand.h  ssl.h  ssl3.h  ts.h  x509_vfy.h
app/src/main/cpp/jni/: LMRepo.cpp  strconv.cpp  strconv.h
app/src/main/cpp/libs/: libgcrypt.la  libgpg-error.la  libssh2.la
app/src/main/cpp/libs/pkgconfig/: gpg-error.pc  libgit2.pc  libssh2.pc
app/src/main/res/anim/: dialog_from_bottom_anim_out.xml  rotate_anim.xml
app/src/main/res/drawable/: checkbox.xml  checked_bg.xml  filet_odel_btn.xml  fillet_activation.xml  fillet_addwallet.xml  fillet_bg.xml  fillet_btn.xml  fillet_btn_cpn.xml  fillet_cancle_bg.xml  fillet_popupyuan.xml  fillet_teeism.xml  fillet_zjc_bg.xml  layer_list_progress_drawable.xml  layer_list_progress_drawable_1.xml  normal_bg.xml  selector_main_rb_text_color.xml  selector_textcolor.xml  selector_wallet_rb_img.xml  shape_progressbar_bg.xml  text_onclick_bg.xml
app/src/main/res/layout/: activity_backup_hints.xml  activity_backup_mnemonics.xml  activity_home.xml  (+26 more)
gradle/wrapper/: gradle-wrapper.properties
(+93 files in other folders)
